# MLHL-gradwork

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.cmd.sh  database.csv  docker-compose.yml  example.env
doc/: .gitignore  refs.bib  report_final.tex  title.tex
doc/classification_examples/: README.md  example_solution_1.ipynb  example_solution_2.ipynb  example_solution_3.ipynb
notebook/: EDA.ipynb  model_baseline.ipynb
notebook/database/: constant.py  database.ipynb  database_w_colors.ipynb  helper.py
