[[tool.pdm.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/44844627/packages/pypi/simple"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true

[project]
name = ""
version = ""
description = ""
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.2",
    "pillow>=9.4.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
    "color-utils>=1.0.2",
]


[tool.pdm.dev-dependencies]
dev = [
    "black[jupyter]>=23.3.0",
    "mypy>=1.4.0",
    "ruff>=0.0.274",
    "isort>=5.12.0",
]

[tool.pdm.scripts]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token='' notebook"
lint = {composite = ["black", "isort", "ruff", "mypy --strict"]} # pdm run lint notebook

[tool.black]
line-length = 100
quiet = true

[tool.isort]
quiet = true
line_length = 100
multi_line_output = 3
profile = "black"

[tool.ruff]
fix = true
line-length = 100
target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
